--- a/server-example/index.html
+++ b/server-example/index.html
@@ -17,6 +17,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/one">One</a>
+    <a href="/ddd">invalid</a>
   </nav>
   <page-content></page-content>
 </body>
