--- a/server-example/index.html
+++ b/server-example/index.html
@@ -10,15 +10,19 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="@webformula/material/theme" rel="stylesheet">
+  <script src="@webformula/material" type="module"></script>
 </head>
 
 <body>
-  Header test
-  <nav>
-    <a href="/">Home</a>
-    <a href="/one">One</a>
-    <a href="/ddd">invalid</a>
-  </nav>
+  <mdw-navigation>
+    <div class="mdw-headline">Webformula core</div>  
+    <mdw-anchor href="/">Home</mdw-anchor>
+    <mdw-anchor href="/one">One</mdw-anchor>
+    <mdw-anchor href="/ddd">Not found</mdw-anchor>
+    </mdw-anchor>
+  </mdw-navigation>
+
   <page-content></page-content>
 </body>
 
