--- a/server-example/index.html
+++ b/server-example/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="@webformula/material/theme" rel="stylesheet">
-  <script src="@webformula/material" type="module"></script>
+  <script src="@webformula/material/components/navigation" type="module"></script>
 </head>
 
 <body>
