--- a/server-example/index.html
+++ b/server-example/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="@webformula/material/theme" rel="stylesheet">
-  <script src="@webformula/material/components/navigation" type="module"></script>
+  <script src="/app.js" type="module"></script>
 </head>
 
 <body>
@@ -20,7 +20,6 @@
     <mdw-anchor href="/">Home</mdw-anchor>
     <mdw-anchor href="/one">One</mdw-anchor>
     <mdw-anchor href="/ddd">Not found</mdw-anchor>
-    </mdw-anchor>
   </mdw-navigation>
 
   <page-content></page-content>
