--- a/server-example/pages/home/page.html
+++ b/server-example/pages/home/page.html
@@ -20,3 +20,5 @@
   we can build small performant applications without a steep learning curve. Webformula core provides the tools to
   achieve this in a tiny package (1.8KB).
 </div>
+
+<mdw-button>test</mdw-button>
