--- a/server-example/index.html
+++ b/server-example/index.html
@@ -10,7 +10,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="@webformula/material/theme" rel="stylesheet">
+  <link href="/app.css" rel="stylesheet">
   <script src="/app.js" type="module"></script>
 </head>
 
