--- a/server-example/pages/home/page.html
+++ b/server-example/pages/home/page.html
@@ -1,11 +1,10 @@
-<h3 style="margin-top: 12px; margin-bottom: 0; font-weight: 300;">Webformula Core</h3>
-<h6 class="mdw-subheader" style="margin-top: 6px; margin-bottom: 0;">Simple no thrills micro framework. Super performant
-  and light-weight!</h6>
+<h3 class="page-title">Webformula Core</h3>
+<div class="page-subheader mdw-font-title-medium">Simple no thrills micro framework. Super performant
+  and light-weight!</div>
 
-<h5 style="margin-bottom: 0;">Highlights</h5>
-<ul style=" margin-top: 8px; font-size: 18px; line-height: 32px; color:rgb(10, 100, 112)">
-  <li>&#9889; Lightweight - <span style="font-weight: bold; font-size: 20px; margin-right: 2px;">1.8</span><span
-      style="font-weight: bold;">KB</span> compressed</li>
+<h6 class="page-secondary-header">Highlights</h6>
+<ul class="page-list">
+  <li>&#9889; Lightweight - <strong>2</strong><strong style="font-size: 17px;">KB</strong> compressed</li>
   <li>&#9889; Fast - Most of the heavy lifting is native browser code</li>
   <li>&#9889; Simple - No complex concepts</li>
   <li>&#9889; 0 dependencies</li>
@@ -13,12 +12,10 @@
   <li>&#9889; HTMLElementExtended adds templates and rendering to web-components</li>
 </ul>
 
-<h5>About</h5>
-<div>
+<h6 class="page-secondary-header">About</h6>
+<div class="mdw-font-body-large">
   Browsers, javascript, css, and html provide a robust set of features these days. With the addition of a couple of
   features like routing,
   we can build small performant applications without a steep learning curve. Webformula core provides the tools to
-  achieve this in a tiny package (1.8KB).
+  achieve this in a tiny package (2KB).
 </div>
-
-<mdw-button>test</mdw-button>
